Fixed header image flickering on state change

--- a/src/App.scss
+++ b/src/App.scss
@@ -29,7 +29,6 @@ body {
               height: 52vh;
               top: 0;
               bottom: 0;
-              background: url(https://images.unsplash.com/photo-1507808973436-a4ed7b5e87c9?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MXwxMDQ5Mjd8MHwxfHNlYXJjaHwxfHxmdW5ueXxlbnwwfHx8&ixlib=rb-1.2.1&q=80&w=1080);
               background-repeat: no-repeat;
               background-size: cover;
               background-position: center;
